manifests/base/resources/qlikview-client/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: qlikview-client
    chart: qlikview-client-1.0.23
    heritage: Helm
    release: qlikview-client
  name: qlikview-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qlikview-client
      release: qlikview-client
  template:
    metadata:
      labels:
        app: qlikview-client
        release: qlikview-client
    spec:
      containers:
      - image: qliktech-docker.jfrog.io/qlikview-client:12.58.0
        imagePullPolicy: null
        livenessProbe:
          httpGet:
            path: /health
            port: 9003
        name: main
        ports:
        - containerPort: 9003
      imagePullSecrets:
      - name: artifactory-docker-secret
---
