manifests/base/resources/qlikview-client/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9180"
    prometheus.io/scrape: "true"
  labels:
    app: qlikview-client
    chart: qlikview-client-1.0.23
    heritage: Helm
    release: qlikview-client
  name: qlikview-client
spec:
  ports:
  - name: qlikview-client
    port: 9003
    protocol: TCP
    targetPort: 9003
  selector:
    app: qlikview-client
    release: qlikview-client
  type: ClusterIP
---
