manifests/base/resources/qlikview-client/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    app: qlikview-client
    chart: qlikview-client-1.0.23
    heritage: Helm
    release: qlikview-client
  name: qlikview-client
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: qlikview-client
          servicePort: 9003
        path: /qv/?(.*)
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: qlikview-client
    chart: qlikview-client-1.0.23
    heritage: Helm
    release: qlikview-client
  name: qlikview-client-ajax
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: qlikview-client
          servicePort: 9003
        path: /QvAjaxZfc
---
